<resources>
    <string name="app_name">CalculaTuSalud</string>
    <string name="txt_imc">Índice de masa corporal (IMC)</string>
    <string name="txt_peso_ideal">Peso ideal</string>
    <string name="txt_metabolismo">Metabolismo basal (MB)</string>
    <string name="txt_calorias">Gasto calórico diario</string>
    <string name="txt_peso">Peso (kg)</string>
    <string name="txt_estatura">Estatura (cm)</string>
    <string name="txt_edad">Edad (años)</string>
    <string name="txt_sexo_hombre">Hombre</string>
    <string name="txt_sexo_mujer">Mujer</string>
    <string name="txt_calcular">Calcular</string>

    <string-array
        name="actividad_fisica_array">
        <item>Seleccione el tipo de actividad física</item>
        <item>Poco o ningún ejercicio</item>
        <item>Ejercicio ligero (1-3 días a la semana)</item>
        <item>Ejercicio moderado (3-5 días a la semana)</item>
        <item>Ejercicio fuerte (6-7 días a la semana)</item>
        <item>Ejercicio muy fuerte (dos veces al día, entrenamientos muy duros)</item>
    </string-array>
</resources>