<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:columnCount="2"
    android:rowCount="3"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".PrincipalActivity">

    <Button
        android:id="@+id/btn_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/txt_imc"
        android:onClick="mostrarIMC"/>

    <Button
        android:id="@+id/btn_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/txt_peso"
        android:onClick="mostrarPeso"/>

    <Space
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_column="0"
        android:layout_row="1" />

    <Button
        android:id="@+id/btn_metabolismo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/txt_metabolismo"
        android:onClick="mostrarMetabolismo"/>

    <Button
        android:id="@+id/btn_calorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2"
        android:text="@string/txt_calorias"
        android:onClick="mostrarCalorias"/>

</GridLayout>
