<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.upm.miw.calculatusalud.CaloriasActivity"
    android:weightSum="1">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_group_sexo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_hombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/txt_sexo_hombre" />

        <RadioButton
            android:id="@+id/radio_mujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/txt_sexo_mujer" />
    </RadioGroup>

    <TextView
        android:id="@+id/txt_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_peso" />

    <EditText
        android:id="@+id/input_peso"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txt_estatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_estatura" />

    <EditText
        android:id="@+id/input_estatura"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txt_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_edad" />

    <EditText
        android:id="@+id/input_edad"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/actividad_fisica_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/actividad_fisica_array"/>

    <Button
        android:id="@+id/btn_calcular_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="147dp"
        android:onClick="calcularCalorias"
        android:text="@string/txt_calcular" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.21" />

</LinearLayout>
